<resources>
    <string name="app_name">FirstWeek</string>
    <string name="main1">오늘 하루는 어땠나요?</string>
    <string name="main2">감정 우표를 선택해주세요</string>
    <string name="main3">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="main4">더없이 행복한 하루였어요</string>
    <string name="main5">들뜨고 흥분돼요</string>
    <string name="main6">평범한 하루였어요</string>
    <string name="main7">생각이 많아지고 불안해요</string>
    <string name="main8">부글부글 화가나요</string>
    <string name="post">우표 화면입니다</string>
    <string name="title_activity_post_page">postPage</string>
</resources>